--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <a href="{{ /project-library.md }}" class="btn">Home</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Projects</a>
+        <a href="{{ '/project-library.md' }}" class="btn">Projects</a>
         <a href="{{ site.github.tar_url }}" class="btn">Jazz</a>
       {% endif %}
     </header>
