--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
         <a href="{{ /project-library.md }}" class="btn">Home</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ '/project-library.md' }}" class="btn">Projects</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Jazz</a>
+        <a href="{{ '/cayman/project-library.md' }}" class="btn">Projects</a>
+        <a href="{{ '/cayman/jazz.md' }}" class="btn">Jazz</a>
       {% endif %}
     </header>
 
