--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <a href="{{ '/cayman/index' }}" class="btn">Home</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ '/cayman/project-library' }}" class="btn">Projects</a>
+        <a href="{{ '/cayman/project-library.html' }}" class="btn">Projects</a>
         <a href="{{ '/cayman/jazz' }}" class="btn">Jazz</a>
       {% endif %}
     </header>
