--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,11 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="{{ '/cayman/index' }}" class="btn">Home</a>
+        <a href="{{ '/cayman/index.html' }}" class="btn">Home</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ '/cayman/project-library.html' }}" class="btn">Projects</a>
-        <a href="{{ '/cayman/jazz' }}" class="btn">Jazz</a>
+        <a href="{{ '/cayman/jazz.html' }}" class="btn">Jazz</a>
       {% endif %}
     </header>
 
