--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
       {% if site.show_downloads %}
-        <a href="{{ '/cayman/index.html' }}" class="btn">Home</a>
-        <a href="{{ '/cayman/project-library.html' }}" class="btn">Projects</a>
-        <a href="{{ '/cayman/jazz.html' }}" class="btn">Jazz</a>
+        <a href="{{ '/me/index.html' }}" class="btn">Home</a>
+        <a href="{{ '/me/project-library.html' }}" class="btn">Projects</a>
+        <a href="{{ '/me/jazz.html' }}" class="btn">Jazz</a>
       {% endif %}
     </header>
 
