--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
         <a href="{{ '/Cayman/index.html' }}" class="btn">Home</a>
         <a href="{{ '/Cayman/project-library.html' }}" class="btn">Projects</a>
         <a href="{{ '/Cayman/jazz.html' }}" class="btn">Jazz</a>
+        <a href="{{ '/Cayman/contact/index.html' }}" class="btn">Contact</a>
       {% endif %}
     </header>
 
