--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,7 @@ input[type=email], select, textarea {
   margin-top: 6px; /* Add a top margin */
   margin-bottom: 16px; /* Bottom margin */
   resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  overflow: auto
 }
 
 /* Style the submit button with a specific background color etc */
