--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,7 @@ input[type=text], select, textarea {
 }
 
 input[type=email], select, textarea {
+  height: 200px
   width: 100%; /* Full width */
   padding: 12px; /* Some padding */  
   border: 1px solid #ccc; /* Gray border */
