--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,3 +47,8 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
+
+img[src$="centerme"] {
+  display:block;
+  margin: 0 auto;
+}
