--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -105,6 +105,46 @@ a {
   }
 }
 
+// For Bootstrap Carousel Buttons
+.btn-carousel {
+  color:rgba(255, 255, 255, 1);
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);// rgba(21, 153, 87, 0.5);
+  opacity: 0.7;
+  border-color: rgba(255, 255, 255, 0.5);
+
+  &:hover {
+    color: rgba(255, 255, 255, 1);
+    text-decoration: none; //rgba(21, 153, 87, 0.8);
+    opacity: 0.88;
+    border-color: rgba(255, 255, 255, 0.6);
+  }
+}
+
+//For Bootstrap Carousel Next/Prev Arrows
+//Manually change fill to black
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e")
+}
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
+
+//Custom
+.carousel-button-align {
+  position: absolute;
+  right: 15%;
+  top: 12px;
+  // bottom: 122px;
+  left: 15%;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #fff;
+  text-align: center;
+  // display: block;
+  // width: 100%;
+}
+
 .page-header {
   color: $header-heading-color;
   text-align: center;
