--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,3 +47,11 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
+
+// To center a div
+.center {
+    text-align: center;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
