--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,13 @@
         <a href="{{ '/Cayman/project-library.html' }}" class="btn">Projects</a>
         <a href="{{ '/Cayman/jazz.html' }}" class="btn">Jazz</a>
         <a href="{{ '/Cayman/contact/index.html' }}" class="btn">Contact</a>
+        <style>
+          .strava-badge- { display: inline-block; height: 48px; }
+          .strava-badge- img { visibility: hidden; height: 48px; }
+          .strava-badge-:hover { background-position: 0 -63px; }
+          .strava-badge-follow { height: 48px; width: 48px; background: url(//badges.strava.com/echelon-sprite-48.png) no-repeat 0 0; }
+        </style>
+        <a href="http://strava.com/athletes/10225865/badge" class="strava-badge- strava-badge-follow" target="_blank"><img src="//badges.strava.com/echelon-sprite-48.png" alt="Strava" /></a>
       {% endif %}
     </header>
 
