--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
           .strava-badge-:hover { background-position: 0 -63px; }
           .strava-badge-follow { height: 48px; width: 48px; background: url(//badges.strava.com/echelon-sprite-48.png) no-repeat 0 0; }
         </style>
-        <a href="http://strava.com/athletes/10225865/badge" class="strava-badge- strava-badge-follow" target="_blank"><img src="//badges.strava.com/echelon-sprite-48.png" alt="Strava" /></a>
+        <a href="http://strava.com/athletes/10225865/badge" class="btn strava-badge- strava-badge-follow" target="_blank"><img src="//badges.strava.com/echelon-sprite-48.png" alt="Strava" /></a>
       {% endif %}
     </header>
 
