--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,8 @@
         <a href="{{ '/Cayman/project-library.html' }}" class="btn">Projects</a>
         <a href="{{ '/Cayman/jazz.html' }}" class="btn">Jazz</a>
         <a href="{{ '/Cayman/contact/index.html' }}" class="btn">Contact</a>
-        <a class="btn"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fiwebsterproductions&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></a>
+        <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fiwebsterproductions&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe>
+      
         <style>
           .strava-badge- { display: inline-block; height: 48px; }
           .strava-badge- img { visibility: hidden; height: 48px; }
