--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
           .strava-badge-:hover { background-position: 0 -31px; }
           .strava-badge-follow { height: 32px; width: 32px; background: url(//badges.strava.com/echelon-sprite-32.png) no-repeat 0 0; }
         </style>
-        <a class="btn"><a href="http://strava.com/athletes/10225865/badge" class="strava-badge- strava-badge-follow" target="_blank"><img src="//badges.strava.com/echelon-sprite-32.png" alt="Strava" /></a></a>
+        <a href="http://strava.com/athletes/10225865/badge" class="strava-badge- strava-badge-follow" target="_blank"><img src="//badges.strava.com/echelon-sprite-32.png" alt="Strava" /></a>
       {% endif %}
     </header>
 
