fixing spacing for socials

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,37 +38,32 @@
         <a href="{{ '/Cayman/project-library.html' }}" class="btn">Projects</a>
         <a href="{{ '/Cayman/jazz.html' }}" class="btn">Jazz</a>
         <a href="{{ '/Cayman/contact/index.html' }}" class="btn">Contact</a>
-        <div class = "row">
-          <div class="column"></div>
-          <div class="column">
-            <div class="grid-container">
-              <div class="grid-item"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fiwebsterproductions&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
-              <style>
-                .strava-badge- { display: inline-block; height: 32px; }
-                .strava-badge- img { visibility: hidden; height: 32px; }
-                .strava-badge-:hover { background-position: 0 -47px; }
-                .strava-badge-follow { height: 32px; width: 32px; background: url(//badges.strava.com/echelon-sprite-32.png) no-repeat 0 0; }
-              </style>
-              <style>
-                .grid-container {
-                  display: grid;
-                  /* grid-column-gap: 50px; */
-                  grid-auto-flow: column;
-                }
-                /* Main div */
-                .column {
-                    float: left;
-                    width: 33.33%;
-                  }
-              </style>
-              <div class="grid-item"><a href="http://strava.com/athletes/10225865/badge" class="strava-badge- strava-badge-follow" target="_blank"><img src="//badges.strava.com/echelon-sprite-32.png" alt="Strava" /></a></div>
-              <div class="grid-item"><a href="https://www.youtube.com/channel/UC6JzdYelcu9M9A-flCpVOEQ"><img src="./assets/icons/youtube32.png"></a></div>
-              <div class="grid-item"><a href="https://www.linkedin.com/in/ian-webster-1918b1158/"><img src="./assets/icons/linkedin32.png"></a></div>
-              <div class="grid-item"><a href="https://devpost.com/iWebster28?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"><img src="./assets/icons/devpost32.png"></a></div>
-              <div class="grid-item"><a href="https://jazz.skule.ca"><img src="./assets/icons/skule_music16.png"></a></div>
-            </div>
-          </div>
-          <div class="column"></div>
+        
+        <div class="d-flex justify-content-center">
+          <div class="p-2"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fiwebsterproductions&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
+          <style>
+            .strava-badge- { display: inline-block; height: 32px; }
+            .strava-badge- img { visibility: hidden; height: 32px; }
+            .strava-badge-:hover { background-position: 0 -47px; }
+            .strava-badge-follow { height: 32px; width: 32px; background: url(//badges.strava.com/echelon-sprite-32.png) no-repeat 0 0; }
+          </style>
+          <style>
+            .grid-container {
+              display: grid;
+              /* grid-column-gap: 50px; */
+              grid-auto-flow: column;
+            }
+            /* Main div */
+            .column {
+                float: left;
+                width: 33.33%;
+              }
+          </style>
+          <div class="p-2"><a href="http://strava.com/athletes/10225865/badge" class="strava-badge- strava-badge-follow" target="_blank"><img src="//badges.strava.com/echelon-sprite-32.png" alt="Strava" /></a></div>
+          <div class="p-2"><a href="https://www.youtube.com/channel/UC6JzdYelcu9M9A-flCpVOEQ"><img src="./assets/icons/youtube32.png"></a></div>
+          <div class="p-2"><a href="https://www.linkedin.com/in/ian-webster-1918b1158/"><img src="./assets/icons/linkedin32.png"></a></div>
+          <div class="p-2"><a href="https://devpost.com/iWebster28?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"><img src="./assets/icons/devpost32.png"></a></div>
+          <div class="p-2"><a href="https://jazz.skule.ca"><img src="./assets/icons/skule_music16.png"></a></div>
         </div>
       {% endif %}
     </header>
