--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         <a href="{{ '/Cayman/index.html' }}" class="btn">Home</a>
         <a href="{{ '/Cayman/project-library.html' }}" class="btn">Projects</a>
         <a href="{{ '/Cayman/jazz.html' }}" class="btn">Jazz</a>
-        <a href="{{ '/Cayman/contact/index.html' }}" class="btn">Contact</a>
+        <a href="{{ '/Cayman/contact.html' }}" class="btn">Contact</a>
         
         <div class="d-flex justify-content-center">
           <div class="p-2"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fiwebsterproductions&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
