--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -397,6 +397,24 @@ a {
   }
 }
 
+
+// Social Badges
+.strava-badge- { display: inline-block; height: 32px; }
+.strava-badge- img { visibility: hidden; height: 32px; }
+.strava-badge-:hover { background-position: 0 -47px; }
+.strava-badge-follow { height: 32px; width: 32px; background: url(//badges.strava.com/echelon-sprite-32.png) no-repeat 0 0; }
+grid-container {
+  display: grid;
+  /* grid-column-gap: 50px; */
+  grid-auto-flow: column;
+}
+/* Main div */
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+
 .site-footer {
   padding-top: 2rem;
   margin-top: 2rem;
